# CPP_KT_20250303

./: Bitoperations.cpp  StackHeapInitialisierung.cpp  aufgabeBecher.cpp  aufgabeBuch.cpp  aufgabenArraysVektoren.cpp  aufgabenFunktionen.cpp  aufgabenFunktionen2.cpp  aufgabenSTL.cpp  aufgabenZeigerReferenzen.cpp  stringExaamples.cpp  vectorExamples.cpp
Dateizugriff_CSV/: csvs.cpp  daten.csv
Dateizugriff_Texte/: beispiel.txt  texte.cpp
Dateizugriff_XML/: data.xml  xmls.cpp
Datenbanken/: CMakeLists.txt  main.cpp
Enigma/: Enigma.py
GUI/: CMakeLists.txt  main.cpp
Objektorientierung/: OOP1.cpp
